samples/_failures_safe/1761329302_f9d8a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc66591a.c: In function ‘main’:
./samples/SAFE/__tmp_bc66591a.c:138:5: error: expected expression at end of input
  138 |     double cpu_time = ((
      |     ^~~~~~
./samples/SAFE/__tmp_bc66591a.c:138:5: error: expected declaration or statement at end of input
